--- a/app/src/main/res/layout/activity_student_dshboard.xml
+++ b/app/src/main/res/layout/activity_student_dshboard.xml
@@ -25,13 +25,14 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+        android:background="@drawable/button"
+        android:layout_weight="2">
 
             <TextView
                 android:id="@+id/textgrid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
+                android:textColor="#ffff"
                 android:text="DASH BOARD"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textStyle="bold"
@@ -53,7 +54,7 @@
             android:padding="14dp">
 
 <!--row1-->
-           <!--coloumn1-->
+
 
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
@@ -76,7 +77,6 @@
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:src="@drawable/button"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
@@ -130,7 +130,7 @@
 
 
            <!--row2-->
-           <!--coloumn2-->
+
 
 
            <android.support.v7.widget.CardView
