--- a/app/src/main/res/layout/activity_student_dshboard.xml
+++ b/app/src/main/res/layout/activity_student_dshboard.xml
@@ -93,6 +93,7 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/attend"
+                      android:layout_marginTop="10dp"
                     />
                    <TextView
                        android:layout_width="match_parent"
@@ -133,13 +134,15 @@
                  <ImageView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:src="@drawable/marks"/>
+                     android:src="@drawable/marks"
+                     android:layout_marginTop="10dp"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Marks"
                         android:fontFamily="sans-serif-smallcaps"
                         android:textStyle="bold"
+                        android:textColor="@android:color/black"
                         android:textAlignment="center"
                         android:layout_gravity="center"/>
 
@@ -174,6 +177,7 @@
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/notes"
+                       android:layout_marginTop="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
