--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -6,18 +6,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     tools:context="com.example.saipr.final_year_proj.menu_header">
-    <ImageView
-        android:id="@+id/circularimg"
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/demo"
-        android:src="@drawable/placement"
-       />
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:src="@drawable/demo"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="1dp" />
     <TextView
         android:id="@+id/profile_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name"
+        android:textAlignment="center"
+        android:layout_gravity="center"
         android:textSize="20dp"/>
     <Button
         android:id="@+id/btnupload"
