random tries for navbar fixes

--- a/app/src/main/res/layout/activity_student_dshboard.xml
+++ b/app/src/main/res/layout/activity_student_dshboard.xml
@@ -10,6 +10,7 @@
     <!--navbar-->
    <android.support.design.widget.NavigationView
         app:headerLayout="@layout/menu_header"
+        android:id="@+id/navview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="#fff"
