--- a/app/src/main/res/layout/activity_register_main.xml
+++ b/app/src/main/res/layout/activity_register_main.xml
@@ -19,15 +19,51 @@
         android:textSize="30sp"
         android:layout_gravity="center"
         android:textStyle="bold" />
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_margin="30sp"
+   >
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180sp"
+        android:src="@drawable/faculty"
+        />
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/student"/>
+
+</RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+       android:layout_margin="20sp"
+        >
+        <Button
+            android:id="@+id/regfac"
+            android:layout_width="150dp"
+            android:layout_marginStart="180sp"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textStyle="bold"
+            android:background="@drawable/button"
+            android:textColor="#fafafa"
+            android:textSize="20dp"
+            android:text="Faculty" />
     <Button
         android:id="@+id/regstud"
-        android:layout_gravity="center"
-        android:layout_width="243dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
+
         android:background="@drawable/button"
         android:textColor="#fafafa"
         android:textSize="20dp"
@@ -35,17 +71,7 @@
         android:textAlignment="center"
         />
 
-    <Button
-        android:id="@+id/regfac"
-        android:layout_width="247dp"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textStyle="bold"
-        android:background="@drawable/button"
-        android:textColor="#fafafa"
-        android:textSize="20dp"
-        android:text="Faculty" />
 
+
+    </RelativeLayout>
 </LinearLayout>
