--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -13,8 +13,8 @@
         android:layout_height="150dp"
         android:layout_gravity="center"
         android:src="@drawable/demo"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="1dp" />
+        app:civ_border_color="#00bfa5"
+        app:civ_border_width="4dp" />
     <TextView
         android:id="@+id/profile_name"
         android:layout_width="match_parent"
