--- a/app/src/main/res/layout/content_student_dashboard.xml
+++ b/app/src/main/res/layout/content_student_dashboard.xml
@@ -194,6 +194,7 @@
                 android:layout_marginRight="16dp"
                 app:cardElevation="20dp"
                 app:cardCornerRadius="8dp"
+                android:id="@+id/placement_card"
                 >
 
                 <LinearLayout
