--- a/app/src/main/res/menu/activity_student_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_student_dashboard_drawer.xml
@@ -12,7 +12,7 @@
             android:title="Logout" />
     </group>
 
-    <item android:title="Communicate">
+    <!--<item android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
@@ -23,6 +23,6 @@
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />
         </menu>
-    </item>
+    </item>-->
 
 </menu>
