--- a/FinalYearProjectJSP/web/index.css
+++ b/FinalYearProjectJSP/web/index.css
@@ -7,7 +7,147 @@ and open the template in the editor.
     Created on : Feb 12, 2018, 9:22:34 PM
     Author     : saipr
 */
-.title
+html,body {
+    margin: 0;
+    padding: 0;
+    height:100%;
+    width: 100%;
+}
+.landing
+  {
+     height:100%;
+    width: 100%;
+    margin: auto;
+    background: url(img/back.JPG);
+    display: table;
+    top:0;
+    background-size: cover;
+    }
+.landing .inner
 {
-    color:blue;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    max-width: none;
+    
+}
+
+.head {
+        font-family: 'Bree Serif', serif;
+}
+.head1
+ {
+        font-family: 'Bree Serif', serif;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+.navtrigger{
+  font-size:30px;
+  cursor:pointer;
+  position: fixed;
+   
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+
+
+
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  padding-bottom:500px;
+  padding-left: 150px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  display: block;
+   font-size: 16px;
+  cursor: pointer;
+   width: 150px;
+   
+   
+}
+
+.btn-group .button {
+    border-bottom: none; /* Prevent double borders */
+   width: 200px;
+    background-color:#00bfa5;
+    border-radius:8px;
+    height: 60px;
+}
+
+.btn-group .button:hover {
+    background-color:  #00796b ;
+}
+
+#faccontainer:hover .image1 {
+  opacity: 0.3;
+}
+
+#faccontainer:hover .middle1 {
+  opacity: 1;
+}
+
+.middle1 {
+  transition: .5s ease;
+  opacity: 0;
+  padding-bottom:500px;
+  padding-left: 150px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  display: inline-block;
+   font-size: 16px;
+  cursor: pointer;
+   width: 150px;
+   display: block;
+}
+#studcontainer:hover .image {
+  opacity: 0.3;
+}
+
+#studcontainer:hover .middle {
+  opacity: 1;
 }
